--- a/templates/list-questions.html
+++ b/templates/list-questions.html
@@ -9,7 +9,7 @@
     <table>
         <tr>
             {% for title in titles %}
-                <h3><a href="#">{{title}}</a></h3>
+                <h3><a href="{{url_for('question_route', question_id=loop.index)}}">{{title}}</a></h3>
             {% endfor %}
         </tr>
     </table>
