--- a/templates/question-page.html
+++ b/templates/question-page.html
@@ -25,7 +25,9 @@
             {% if answer['question_id'] == post['id'] %}
                 <div><span>{{answer['submission_time']}}</span><br> votes: {{answer['vote_number']}}</div>
                     <div>{{answer['message']|replace("\n", "<br>")|safe}}</div>
-                    <div>{{answer['image']}}</div><br>
+                    {% if answer['image'] %}
+                        <div>{{answer['image']}}</div><br>
+                    {% endif %}
             {% endif %}
         {% endfor %}
     </div>
