--- a/templates/question-edit-page.html
+++ b/templates/question-edit-page.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ask a question</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('statis', filename='css/style.css') }}" />
 </head>
 <body>
     <form method="post" action="{{url_for('add_question_route')}}">
