--- a/templates/question-page.html
+++ b/templates/question-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Question page</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('statis', filename='css/style.css') }}" />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}" />
 </head>
 <body>
     <div>
