--- a/templates/question-page.html
+++ b/templates/question-page.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}" />
 </head>
 <body>
-    <div>
+    <div class="question">
         <h1><a href="{{url_for('list_route')}}">Back to question list</a></h1>
         <h1><a href="{{url_for('answer_route', question_id=question_id)}}">Add answer</a></h1>
-        <div>
+        <div class="title_box">
             <div><span class="title">{{post['title']}}</span>, <span><br> votes: {{post['vote_number']}}</span></div>
-            <div>{{post['submission_time']}}</div>
+            <div class="right">{{post['submission_time']}}</div>
         </div>
         <div>
             {{post['message']|replace("\n", "<br>")|safe}}
@@ -22,7 +22,7 @@
         <div>views: {{post['view_number']}}</div>
         {% if question_comments %}
             {% for question_comment in question_comments %}
-                <div>
+                <div class="comment_box">
                     <div>{{ question_comment['message'] }}</div>
                     <div>{{ question_comment['submission_time'] }}</div>
                 </div>
