--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,12 @@ body {
     font-size: 14pt;
 }
 
+.question {
+    padding-left: 0.5em;
+    margin: 0.5em;
+    border-left: 1px solid #AAA;
+}
+
 .title_box div:first-child {
     display: inline-block;
 }
@@ -15,11 +21,25 @@ body {
 }
 
 .right {
+    margin-left: 1em;
     display: inline-block;
+    font-size: 0.8em;
+}
+
+.message {
+    padding: 1em;
+    margin: 0.5em;
+    border: 1px solid #DDD;
+    border-radius: 1em;
+    display: table;
 }
 
 .comment_box {
     font-size: 0.8em;
     margin: 8pt 1em 1em 4pt;
+}
+
+.answer_head {
+    font-size: 0.8em;
 }
 
