--- a/templates/answer_comment.html
+++ b/templates/answer_comment.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 
-    <form method="post" action="{{url_for('answer_comment_route', answer_id=answer_id)}}">
-        <input type="hidden" name="id" value="{{answer_id}}">
+    <form method="post" action="{{url_for('answer_comment_route', answer_id=answer_id, question_id=question_id)}}">
+        <input type="hidden" name="answer_id" value="{{answer_id}}">
+        <input type="hidden" name="question_id" value="{{question_id}}">
         <label for="comment-msg">Enter your comment: </label><br>
         <textarea id="comment-msg" cols="50" rows="40" name="comment-msg"></textarea><br>
         <input type="submit" value="Add an comment">
