--- a/templates/answer_comment.html
+++ b/templates/answer_comment.html
@@ -1,18 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Ask mate: comment to answer</title>
-</head>
-<body>
-
-    <form method="post" action="{{url_for('answer_comment_route', answer_id=answer_id, question_id=question_id)}}">
-        <input type="hidden" name="answer_id" value="{{answer_id}}">
-        <input type="hidden" name="question_id" value="{{question_id}}">
-        <label for="comment-msg">Enter your comment: </label><br>
-        <textarea id="comment-msg" cols="50" rows="40" name="comment-msg"></textarea><br>
-        <input type="submit" value="Add an comment">
-    </form>
-
-</body>
-</html>
+{% extends 'layout.html' %}
+    {% block content %}
+        <form method="post" action="{{url_for('answer_comment_route', answer_id=answer_id, question_id=question_id)}}">
+            <input type="hidden" name="answer_id" value="{{answer_id}}">
+            <input type="hidden" name="question_id" value="{{question_id}}">
+            <label for="comment-msg">Enter your comment: </label><br>
+            <textarea id="comment-msg" cols="50" rows="40" name="comment-msg"></textarea><br>
+            <input type="submit" value="Add an comment">
+        </form>
+    {% endblock %}
