--- a/templates/list_question.html
+++ b/templates/list_question.html
@@ -1,9 +1,11 @@
 {% extends 'layout.html' %}
     {% block content %}
-        <table>
-            <h1><a href="{{url_for('add_question_route')}}">Ask a question.</a></h1>
-            {% for question in questions %}
-                <tr><td><h3><a href="{{url_for('question_route', question_id=question['id'])}}">{{question['title']}}</a></h3></td></tr>
-            {% endfor %}
-        </table>
+        <form method="get" action="{{url_for('search_route')}}">
+            <input type="text" name="q">
+            <input type="submit" value="Search">
+        </form>
+        <h1><a href="{{url_for('add_question_route')}}">Ask a question.</a></h1>
+        {% for question in questions %}
+            <h3><a href="{{url_for('question_route', question_id=question['id'])}}">{{question['title']}}</a></h3>
+        {% endfor %}
     {% endblock %}}
