--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}" />
 </head>
 <body>
+    <a href="{{ url_for('register_route') }}">Register new user</a>
     {% block content %}{% endblock %}
 </body>
 </html>
