--- a/templates/question_page.html
+++ b/templates/question_page.html
@@ -4,7 +4,14 @@
             <h1><a href="{{url_for('list_route')}}">Back to question list</a></h1>
             <h1><a href="{{url_for('answer_route', question_id=question_id)}}">Add answer</a></h1>
             <div class="title_box">
-                <div><span class="title">{{post['title']}}</span>, <span><br> votes: {{post['vote_number']}}</span></div>
+                <div>
+                    <span class="title">{{post['title']}}</span>, 
+                    <div>votes:
+                        <a href="#"><img src="{{ url_for('static', filename='images/vote_up.png') }}" /></a>
+                        {{post['vote_number']}}
+                        <a href="#"><img src="{{ url_for('static', filename='images/vote_down.png') }}" /></a>
+                    </div>
+                </div>
                 <div class="right">{{post['submission_time']}}</div>
             </div>
             <div class="message">
