--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,8 +6,13 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}" />
 </head>
 <body>
-    <a class="user" href="{{ url_for('register_route') }}">Register new user</a>
-    <a class="user" href="{{ url_for('login_route') }}">Log in</a><br>
+    {% if not session['user'] %}
+        <a class="user" href="{{ url_for('register_route') }}">Register new user</a>
+        <a class="user" href="{{ url_for('login_route') }}">Log in</a><br>
+    {% else %}
+        <a class="user" href="{{ url_for('logout_route') }}">Log out</a>
+        <h2>Hello {{ session['user'] }}</h2>
+    {% endif %}
     {% block content %}{% endblock %}
 </body>
 </html>
