--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,11 @@
 {% extends 'layout.html' %}
     {% block content %}
         <form method="post" action="{{ url_for('login_route') }}">
+            <h1>Please log in: </h1>
             <label for="login">Login: </label>
             <input type="text" id="login" name="login"><br>
             <label for="password">Password: </label>
-            <input type="text" id="password" name="password"><br>
+            <input type="password" id="password" name="password"><br>
             <input type="submit" value="Log in">
         </form>
     {% endblock %}
