Add link to main page

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
     {% block content %}
         <form method="post" action="{{ url_for('login_route') }}">
+            <h3><a href="{{ url_for('list_route') }}">Back to main page</a></h3>
             <h1>Please log in: </h1>
             <label for="login">Login: </label>
             <input type="text" id="login" name="login"><br>
